--- a/.github/workflows/fichar.yml
+++ b/.github/workflows/fichar.yml
@@ -2,11 +2,11 @@ name: Ejecutar Fichaje
 
 on:
   schedule:
-    - cron: '15 13 * * 1-5'  # Esto ejecutará el script de lunes a viernes a las 13:15 UTC
+    - cron: '20 13 * * 1-5'  # Ejecutará el script de lunes a viernes a las 13:18 hora de Madrid (11:18 UTC)
 
 jobs:
   run_fichaje:
-    runs-on: ubuntu-latest  # Usamos un contenedor Ubuntu para ejecutar el script
+    runs-on: windows-latest  # Usamos un contenedor de Windows en GitHub Actions
     steps:
       - name: Check out the repository
         uses: actions/checkout@v2
@@ -20,13 +20,14 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install selenium
-        
-      - name: Descargar el driver de Edge
+
+      - name: Instalar Microsoft Edge y su controlador
         run: |
-          curl -L https://msedgedriver.azureedge.net/112.0.1722.64/edgedriver_win64.zip -o edgedriver.zip
-          unzip edgedriver.zip
-          mv msedgedriver.exe /usr/local/bin/msedgedriver
+          # Descargar e instalar Microsoft Edge en el entorno Windows
+          Invoke-WebRequest -Uri https://msedgedriver.azureedge.net/112.0.1722.64/edgedriver_win64.zip -OutFile edgedriver.zip
+          Expand-Archive -Path edgedriver.zip -DestinationPath C:\edgedriver
+          $env:PATH += ";C:\edgedriver"
 
       - name: Ejecutar script de fichaje
         run: |
-          python fichar.py
+          USERNAME=${{ secrets.USERNAME }} PASSWORD=${{ secrets.PASSWORD }} python fichar.py
