--- a/.github/workflows/fichar.yml
+++ b/.github/workflows/fichar.yml
@@ -2,7 +2,8 @@ name: Ejecutar Fichaje
 
 on:
   schedule:
-    - cron: '23 13 * * 1-5'  # Ejecutará el script de lunes a viernes a las 13:18 hora de Madrid (11:18 UTC)
+    # Esto ejecutará el flujo de trabajo a las 13:15 hora local en España (CEST, UTC+2)
+    - cron: '50 11 * * 1-5'  # 11:15 UTC (13:15 hora local España en horario de verano)
 
 jobs:
   run_fichaje:
