--- a/.github/workflows/fichar.yml
+++ b/.github/workflows/fichar.yml
@@ -3,7 +3,7 @@ name: Ejecutar Fichaje
 on:
   schedule:
     # Esto ejecutará el flujo de trabajo a las 13:15 hora local en España (CEST, UTC+2)
-    - cron: '50 11 * * 1-5'  # 11:15 UTC (13:15 hora local España en horario de verano)
+    - cron: '05 12 * * 1-5'  # 11:15 UTC (13:15 hora local España en horario de verano)
 
 jobs:
   run_fichaje:
@@ -29,6 +29,13 @@ jobs:
           Expand-Archive -Path edgedriver.zip -DestinationPath C:\edgedriver
           $env:PATH += ";C:\edgedriver"
 
-      - name: Ejecutar script de fichaje
+      - name: Set environment variables
         run: |
-          USERNAME=${{ secrets.USERNAME }} PASSWORD=${{ secrets.PASSWORD }} python fichar.py
+          $env:USERNAME = $env:USERNAME_SECRET
+          $env:PASSWORD = $env:PASSWORD_SECRET
+
+      - name: Run fichar.py
+        run: python fichar.py
+        env:
+          USERNAME_SECRET: ${{ secrets.USERNAME }}
+          PASSWORD_SECRET: ${{ secrets.PASSWORD }}
