--- a/.github/workflows/fichar.yml
+++ b/.github/workflows/fichar.yml
@@ -3,7 +3,7 @@ name: Ejecutar Fichaje
 on:
   schedule:
     # Esto ejecutará el flujo de trabajo a las 13:15 hora local en España (CEST, UTC+2)
-    - cron: '47 14 * * 1-5'  # 16:30 CEST = 14:30 UTC
+    - cron: '30 5 * * *'  # 07:43 CEST (en horario de verano, UTC+2) / 06:43 UTC
   workflow_dispatch:  # Permite ejecutar el flujo de trabajo manualmente desde GitHub UI
 
 jobs:
