--- a/.github/workflows/fichar.yml
+++ b/.github/workflows/fichar.yml
@@ -2,29 +2,37 @@ name: Ejecutar Fichaje
 
 on:
   schedule:
-#    - cron: '20 5 * * 1-4'  # Lunes a jueves a las 07:30 CEST (05:30 UTC) para cuando no es verano
-    - cron: '40 5 * * 1-4'  # Lunes a jueves a las 07:30 CEST (05:30 UTC) para VERANO
-    - cron: '40 5 * * 5'    # Viernes a las 07:50 CEST (05:50 UTC)
+    # - cron: '20 5 * * 1-4'  # Lunes a jueves a las 07:30 CEST (05:30 UTC) invierno
+    - cron: '40 5 * * 1-4'    # Lunes a jueves a las 07:30 CEST (05:30 UTC) verano
+    - cron: '50 5 * * 5'      # Viernes a las 07:50 CEST (05:50 UTC)
   workflow_dispatch:  # Permite ejecución manual desde GitHub UI
 
 jobs:
   run_fichaje:
-    runs-on: windows-latest  # Usamos un contenedor de Windows en GitHub Actions
+    runs-on: windows-latest
+
     steps:
-      - name: Check out the repository
-        uses: actions/checkout@v2
-        
-      - name: Configurar Python
-        uses: actions/setup-python@v2
+      - name: Checkout del repositorio
+        uses: actions/checkout@v3
+
+      # Cache para que webdriver-manager no tenga que descargar siempre el msedgedriver
+      - name: Cache webdriver-manager
+        uses: actions/cache@v3
         with:
-          python-version: '3.x'
-        
+          path: ~/.wdm
+          key: ${{ runner.os }}-wdm
+
+      - name: Configurar Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.13'
+
       - name: Instalar dependencias
         run: |
-              python -m pip install --upgrade pip
-              pip install selenium webdriver-manager
+          python -m pip install --upgrade pip
+          pip install selenium webdriver-manager
 
-      - name: Run fichar.py
+      - name: Ejecutar fichar.py
         env:
           USERNAME: ${{ secrets.USERNAME }}
           PASSWORD: ${{ secrets.PASSWORD }}
