--- a/.github/workflows/fichar.yml
+++ b/.github/workflows/fichar.yml
@@ -2,8 +2,8 @@ name: Ejecutar Fichaje
 
 on:
   schedule:
-    # - cron: '20 5 * * 1-4'  # Lunes a jueves a las 07:30 CEST (05:30 UTC) invierno
-    - cron: '40 5 * * 1-4'    # Lunes a jueves a las 07:30 CEST (05:30 UTC) verano
+    - cron: '20 5 * * 1-4'  # Lunes a jueves a las 07:30 CEST (05:30 UTC) invierno
+    #- cron: '40 5 * * 1-4'    # Lunes a jueves a las 07:30 CEST (05:30 UTC) verano
     - cron: '50 5 * * 5'      # Viernes a las 07:50 CEST (05:50 UTC)
   workflow_dispatch:  # Permite ejecución manual desde GitHub UI
 
