--- a/.github/workflows/fichar.yml
+++ b/.github/workflows/fichar.yml
@@ -2,9 +2,14 @@ name: Ejecutar Fichaje
 
 on:
   schedule:
-    - cron: '20 5 * * 1-4'  # Lunes a jueves a las 07:30 CEST (05:30 UTC) invierno
-    #- cron: '40 5 * * 1-4'    # Lunes a jueves a las 07:30 CEST (05:30 UTC) verano
-    - cron: '50 5 * * 5'      # Viernes a las 07:50 CEST (05:50 UTC)
+    # 🕒 Horario de invierno (CET = UTC+1)
+    - cron: '30 6 * * 1-4'  # Lunes a jueves a las 07:30 CET (06:30 UTC)
+    - cron: '50 6 * * 5'    # Viernes a las 07:50 CET (06:50 UTC)
+
+    # 🕑 Horario de verano (CEST = UTC+2) — descomentar en marzo
+    # - cron: '30 5 * * 1-4'  # Lunes a jueves a las 07:30 CEST (05:30 UTC)
+    # - cron: '50 5 * * 5'    # Viernes a las 07:50 CEST (05:50 UTC)
+
   workflow_dispatch:  # Permite ejecución manual desde GitHub UI
 
 jobs:
