--- a/.github/workflows/fichar.yml
+++ b/.github/workflows/fichar.yml
@@ -3,8 +3,8 @@ name: Ejecutar Fichaje
 on:
   schedule:
     # 🕒 Horario de invierno (CET = UTC+1)
-    - cron: '20 6 * * 1-4'  # Lunes a jueves a las 07:30 CET (06:30 UTC)
-    - cron: '20 6 * * 5'    # Viernes a las 07:50 CET (06:50 UTC)
+    - cron: '30 6 * * 1-4'  # Lunes a jueves(07:30 CET)
+    - cron: '30 6 * * 5'    # Viernes (07:30 CET)
 
     # 🕑 Horario de verano (CEST = UTC+2) — descomentar en marzo
     # - cron: '30 5 * * 1-4'  # Lunes a jueves a las 07:30 CEST (05:30 UTC)
@@ -14,7 +14,7 @@ on:
 
 jobs:
   run_fichaje:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout del repositorio
